--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "express": "^4.19.2",
     "express-promise-router": "^4.1.1",
     "helmet": "^7.1.0",
-    "pg": "^8.12.0"
+    "pg": "^8.12.0",
+    "yup": "^1.4.0"
   }
 }
