--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20.14.8",
     "@types/pg": "^8.11.6",
     "nodemon": "^3.1.4",
@@ -27,6 +28,7 @@
     "express": "^4.19.2",
     "express-promise-router": "^4.1.1",
     "helmet": "^7.1.0",
+    "jsonwebtoken": "^9.0.2",
     "pg": "^8.12.0",
     "yup": "^1.4.0"
   }
