chore(docker): sync src file changes into container's file system

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,17 +6,15 @@ services:
     build: .
     ports:
       - 3000:5000
-    develop:
-      watch:
-        - action: sync
-          path: ./src
-          target: /app/src
     env_file:
       - .env
     depends_on:
       - db
     restart: always
-
+    volumes:
+      - type: bind
+        source: ./src
+        target: /app/src
   db:
     container_name: postgres
     image: postgres:latest
