--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -17,9 +17,15 @@ services:
         target: /app/src
   db:
     container_name: postgres
+    hostname: postgres
     image: postgres:latest
     ports:
       - 8080:5432
     env_file:
       - db.env
     restart: always
+    volumes:
+      - db-data:/etc/data
+
+volumes:
+  db-data:
